--- a/package.json
+++ b/package.json
@@ -24,13 +24,8 @@
     "grunt-contrib-csslint": "^1.0.0",
     "grunt-contrib-cssmin": "^1.0.2",
     "grunt-contrib-htmlmin": "^2.0.0",
-    "grunt-contrib-jshint": "^1.0.0",
     "grunt-contrib-sass": "^1.0.0",
-    "grunt-express-server": "^0.5.3",
-    "grunt-mocha-phantomjs": "^4.0.0",
-    "grunt-shell": "^1.3.1",
-    "less-plugin-autoprefix": "^1.5.1",
-    "less-plugin-clean-css": "^1.5.1"
+    "grunt-express-server": "^0.5.3"
   },
   "devDependencies": {
     "grunt-contrib-watch": "^1.0.0"
