--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
   "name": "marcflennert",
   "version": "1.0.0",
   "description": "Website for Marc Flennert",
-  "main": "server.js",
+  "main": "dist/js/app.js",
+  "scripts": {
+    "test": "grunt test",
+    "start": "node serve.js"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/quantumtom/marcflennert.git"
