--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/js/app.js",
   "scripts": {
     "test": "grunt test",
-    "start": "node serve.js"
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
