--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "grunt-contrib-cssmin": "^2.0.0",
     "grunt-contrib-htmlmin": "^2.0.0",
     "grunt-contrib-sass": "^1.0.0",
-    "grunt-express-server": "^0.5.3"
+    "grunt-express-server": "^0.5.3",
+    "grunt-shell": "^2.1.0"
   },
   "devDependencies": {
     "grunt-contrib-watch": "^1.0.0"
