--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "marcflennert",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Website for Marc Flennert",
   "main": "dist/js/app.js",
   "engines": {
@@ -8,8 +8,9 @@
     "npm": "4.0.5"
   },
   "scripts": {
-    "install": "grunt build",
-    "start": "node server.js"
+    "dev": "cross-env NODE_ENV=dev webpack-dev-server --mode=development --hot --open --progress --config webpack.config.dev.js",
+    "build": "export NODE_ENV=production && webpack --mode=production --config webpack.config.build.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -18,24 +19,22 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.15.2",
-    "compression": "^1.6.2",
-    "express": "^4.14.0",
-    "grunt": "^1.0.1",
-    "grunt-bootlint": "^0.10.1",
-    "grunt-bump": "^0.8.0",
-    "grunt-cache-bust": "^1.3.0",
-    "grunt-cli": "^1.2.0",
-    "grunt-contrib-clean": "^1.0.0",
-    "grunt-contrib-connect": "^1.0.2",
-    "grunt-contrib-copy": "^1.0.0",
-    "grunt-contrib-csslint": "^2.0.0",
-    "grunt-contrib-cssmin": "^2.0.0",
-    "grunt-contrib-htmlmin": "^2.0.0",
-    "grunt-express-server": "^0.5.3",
-    "grunt-shell": "^2.1.0"
+    "blazy": "^1.8.2"
   },
   "devDependencies": {
-    "grunt-contrib-watch": "^1.0.0"
+    "clean-webpack-plugin": "^0.1.19",
+    "cross-env": "^5.1.6",
+    "css-loader": "^0.28.11",
+    "ejs-loader": "^0.3.0",
+    "eslint": "^4.19.1",
+    "file-loader": "^1.1.11",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
+    "path": "^0.12.7",
+    "style-loader": "^0.21.0",
+    "webpack": "^4.10.2",
+    "webpack-cli": "^3.0.1",
+    "webpack-dev-server": "^3.1.4",
+    "webpack-merge": "^4.1.2"
   }
 }
