--- a/package.json
+++ b/package.json
@@ -19,14 +19,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "blazy": "^1.8.2"
+    "blazy": "^1.8.2",
+    "backbone": "^1.3.3",
+    "bootstrap": "^4.1.1",
+    "domready": "^1.0.8",
+    "handlebars": "^4.0.11",
+    "jquery": "^3.3.1",
+    "underscore": "^1.9.1"
   },
   "devDependencies": {
     "clean-webpack-plugin": "^0.1.19",
     "cross-env": "^5.1.6",
     "css-loader": "^0.28.11",
     "ejs-loader": "^0.3.0",
-    "eslint": "^4.19.1",
+    "eslint": "^5.0.1",
     "file-loader": "^1.1.11",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
