--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "marcflennert",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Website for Marc Flennert",
-  "main": "dist/js/app.js",
+  "main": "index.js",
   "engines": {
     "node": "6.11.1",
     "npm": "4.0.5"
@@ -16,13 +16,15 @@
     "type": "git",
     "url": "https://github.com/quantumtom/marcflennert.git"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "cornyn@gmail.com",
+  "license": "UNLICENSED",
   "dependencies": {
-    "blazy": "^1.8.2",
     "backbone": "^1.3.3",
+    "blazy": "^1.8.2",
     "bootstrap": "^4.1.1",
     "domready": "^1.0.8",
+    "ejs": "^2.6.1",
+    "express": "^4.16.3",
     "handlebars": "^4.0.11",
     "jquery": "^3.3.1",
     "underscore": "^1.9.1"
@@ -38,8 +40,8 @@
     "html-webpack-plugin": "^3.2.0",
     "path": "^0.12.7",
     "style-loader": "^0.21.0",
-    "webpack": "^4.10.2",
-    "webpack-cli": "^3.0.1",
+    "webpack": "^4.14.0",
+    "webpack-cli": "^3.0.8",
     "webpack-dev-server": "^3.1.4",
     "webpack-merge": "^4.1.2"
   }
