--- a/package.json
+++ b/package.json
@@ -27,12 +27,15 @@
     "express": "^4.16.3",
     "handlebars": "^4.0.11",
     "jquery": "^3.3.1",
+    "lodash": "^4.17.10",
+    "popper.js": "^1.14.3",
     "underscore": "^1.9.1"
   },
   "devDependencies": {
+    "babel-preset-env": "^1.7.0",
     "clean-webpack-plugin": "^0.1.19",
     "cross-env": "^5.1.6",
-    "css-loader": "^0.28.11",
+    "css-loader": "^1.0.0",
     "ejs-loader": "^0.3.0",
     "eslint": "^5.0.1",
     "file-loader": "^1.1.11",
@@ -40,7 +43,7 @@
     "html-webpack-plugin": "^3.2.0",
     "path": "^0.12.7",
     "style-loader": "^0.21.0",
-    "webpack": "^4.14.0",
+    "webpack": "^4.15.1",
     "webpack-cli": "^3.0.8",
     "webpack-dev-server": "^3.1.4",
     "webpack-merge": "^4.1.2"
