--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=dev webpack-dev-server --mode=development --hot --open --progress --config webpack.config.dev.js",
     "build": "export NODE_ENV=production && webpack --mode=production --config webpack.config.build.js",
+    "server": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -28,6 +29,8 @@
     "handlebars": "^4.0.11",
     "jquery": "^3.3.1",
     "lodash": "^4.17.10",
+    "nodemon": "^1.18.1",
+    "npm-bump": "0.0.25",
     "popper.js": "^1.14.3",
     "underscore": "^1.9.1"
   },
@@ -37,13 +40,13 @@
     "cross-env": "^5.1.6",
     "css-loader": "^1.0.0",
     "ejs-loader": "^0.3.0",
-    "eslint": "^5.0.1",
+    "eslint": "^5.1.0",
     "file-loader": "^1.1.11",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "path": "^0.12.7",
     "style-loader": "^0.21.0",
-    "webpack": "^4.15.1",
+    "webpack": "^4.16.0",
     "webpack-cli": "^3.0.8",
     "webpack-dev-server": "^3.1.4",
     "webpack-merge": "^4.1.2"
