--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   },
   "scripts": {
     "dev": "cross-env NODE_ENV=dev webpack-dev-server --mode=development --hot --open --progress --config webpack.config.dev.js",
+    "start": "node index.js",
     "build": "export NODE_ENV=production && webpack --mode=production --config webpack.config.build.js",
-    "server": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -39,7 +39,6 @@
     "clean-webpack-plugin": "^0.1.19",
     "cross-env": "^5.1.6",
     "css-loader": "^1.0.0",
-    "ejs-loader": "^0.3.0",
     "eslint": "^5.1.0",
     "file-loader": "^1.1.11",
     "html-loader": "^0.5.5",
