--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
   "license": "UNLICENSED",
   "dependencies": {
     "backbone": "^1.3.3",
-    "blazy": "^1.8.2",
     "bootstrap": "^4.1.1",
     "domready": "^1.0.8",
     "ejs": "^2.6.1",
@@ -31,8 +30,7 @@
     "lodash": "^4.17.10",
     "nodemon": "^1.18.1",
     "npm-bump": "0.0.25",
-    "popper.js": "^1.14.3",
-    "underscore": "^1.9.1"
+    "popper.js": "^1.14.3"
   },
   "devDependencies": {
     "babel-preset-env": "^1.7.0",
