--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "marcflennert",
   "version": "1.0.3",
-  "description": "Website for Marc Flennert",
+  "description": "Professional website for Marc Flennert",
   "main": "index.js",
   "engines": {
     "node": "6.11.1",
@@ -11,7 +11,7 @@
     "local": "webpack-dev-server --mode=development --hot --open --progress --config webpack.config.dev.js --env=dev",
     "build:dev": "webpack --mode=development --open --progress --config webpack.config.build.js",
     "build:prod": "webpack --mode=production --config webpack.config.build.js",
-    "server": "node index.js",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,32 +21,29 @@
   "author": "cornyn@gmail.com",
   "license": "UNLICENSED",
   "dependencies": {
-    "backbone": "^1.3.3",
     "bootstrap": "^4.1.3",
     "domready": "^1.0.8",
     "ejs": "^2.6.1",
-    "express": "^4.16.3",
-    "handlebars": "^4.0.11",
+    "express": "^4.16.4",
+    "handlebars": "^4.0.12",
     "jquery": "^3.3.1",
-    "lodash": "^4.17.10",
-    "nodemon": "^1.18.3",
-    "npm-bump": "0.0.25",
+    "lodash": "^4.17.11",
+    "nodemon": "^1.18.6",
     "popper.js": "^1.14.4"
   },
   "devDependencies": {
     "babel-preset-env": "^1.7.0",
     "clean-webpack-plugin": "^0.1.19",
-    "cross-env": "^5.1.6",
-    "css-loader": "^1.0.0",
-    "eslint": "^5.3.0",
-    "file-loader": "^1.1.11",
+    "css-loader": "^1.0.1",
+    "eslint": "^5.8.0",
+    "file-loader": "^2.0.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "path": "^0.12.7",
-    "style-loader": "^0.21.0",
-    "webpack": "^4.16.4",
-    "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.5",
+    "style-loader": "^0.23.1",
+    "webpack": "^4.25.1",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.10",
     "webpack-merge": "^4.1.4"
   }
 }
