--- a/package.json
+++ b/package.json
@@ -27,15 +27,11 @@
     "express": "^4.16.4",
     "handlebars": "^4.0.12",
     "jquery": "^3.3.1",
-    "lodash": "^4.17.11",
-    "nodemon": "^1.18.6",
-    "popper.js": "^1.14.4"
+    "nodemon": "^1.18.6"
   },
   "devDependencies": {
-    "babel-preset-env": "^1.7.0",
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^1.0.1",
-    "eslint": "^5.8.0",
     "file-loader": "^2.0.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
