--- a/package.json
+++ b/package.json
@@ -25,13 +25,13 @@
     "domready": "^1.0.8",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
-    "handlebars": "^4.0.12",
     "jquery": "^3.3.1",
-    "nodemon": "^1.18.6"
+    "popper.js": "^1.14.5"
   },
   "devDependencies": {
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^1.0.1",
+    "eslint": "^5.8.0",
     "file-loader": "^2.0.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
