--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "marcflennert",
-  "version": "1.2.0",
+  "version": "1.2.1-pre",
   "description": "Professional website for Marc Flennert",
   "main": "index.js",
   "engines": {
