--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "local": "webpack-dev-server --mode=development --hot --open --progress --config webpack.config.dev.js --env=dev",
     "build:dev": "webpack --mode=development --open --progress --config webpack.config.build.js",
-    "build:prod": "webpack --mode=production --config webpack.config.build.js",
+    "build:prod": "webpack --mode=production --progress --config webpack.config.build.js",
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
