--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "build:dev": "webpack --mode=development --open --progress --config webpack.config.build.js",
     "build:prod": "webpack --mode=production --progress --config webpack.config.build.js",
     "start": "node index.js",
+    "server": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -26,21 +27,26 @@
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "jquery": "^3.3.1",
+    "lodash": "^4.17.11",
     "popper.js": "^1.14.5"
   },
   "devDependencies": {
     "acorn": "^6.0.4",
     "clean-webpack-plugin": "^1.0.0",
     "css-loader": "^1.0.1",
+    "csv-loader": "^3.0.2",
     "eslint": "^5.9.0",
     "file-loader": "^2.0.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "papaparse": "^4.6.2",
     "path": "^0.12.7",
     "style-loader": "^0.23.1",
     "webpack": "^4.25.1",
     "webpack-cli": "^3.1.2",
+    "webpack-dev-middleware": "^3.4.0",
     "webpack-dev-server": "^3.1.10",
-    "webpack-merge": "^4.1.4"
+    "webpack-merge": "^4.1.4",
+    "xml-loader": "^1.2.1"
   }
 }
