--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "marcflennert",
-  "version": "1.3.2-pre",
+  "version": "1.3.3",
   "description": "Professional website for Marc Flennert",
   "main": "index.js",
   "engines": {
@@ -27,7 +27,6 @@
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "jquery": "^3.3.1",
-    "lodash": "^4.17.11",
     "popper.js": "^1.14.5"
   },
   "devDependencies": {
@@ -35,10 +34,12 @@
     "clean-webpack-plugin": "^1.0.0",
     "css-loader": "^1.0.1",
     "csv-loader": "^3.0.2",
+    "ejs-webpack-loader": "^2.2.2",
     "eslint": "^5.9.0",
     "file-loader": "^2.0.0",
     "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.2.0",
+    "html-webpack-plugin": "^3.0.7",
+    "lodash": "^4.17.5",
     "papaparse": "^4.6.2",
     "path": "^0.12.7",
     "style-loader": "^0.23.1",
