--- a/package.json
+++ b/package.json
@@ -2,17 +2,18 @@
   "name": "marcflennert",
   "version": "1.3.3",
   "description": "Professional website for Marc Flennert",
-  "main": "index.js",
+  "main": "server-prod.js",
   "engines": {
     "node": "v10.1.0",
     "npm": "6.4.1"
   },
   "scripts": {
-    "local": "webpack-dev-server --mode=development --hot --open --progress --config webpack.config.dev.js --env=dev",
+    "serve:local": "webpack-dev-server --mode=development --hot --open --progress --config webpack.config.local.js --env=dev",
     "build:dev": "webpack --mode=development --open --progress --config webpack.config.dev.js",
     "build:prod": "webpack --mode=production --progress --config webpack.config.build.js",
-    "start": "node index.js",
-    "server": "node server.js",
+    "serve:dev": "node serve-dev.js",
+    "serve:prod": "node serve-prod.js",
+    "postinstall": "node serve-prod.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
