Add build fix for prod.

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "build:prod": "webpack --mode=production --progress --config webpack.config.build.js",
     "serve:dev": "node serve-dev.js",
     "serve:prod": "node serve-prod.js",
+    "start": "node serve-prod.js",
     "postinstall": "node serve-prod.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -41,9 +42,12 @@
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.0.7",
     "lodash": "^4.17.5",
+    "mini-css-extract-plugin": "^0.4.4",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
     "papaparse": "^4.6.2",
     "path": "^0.12.7",
     "style-loader": "^0.23.1",
+    "uglifyjs-webpack-plugin": "^2.0.1",
     "webpack": "^4.25.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-middleware": "^3.4.0",
