--- a/package.json
+++ b/package.json
@@ -1,56 +1,101 @@
 {
   "name": "marcflennert",
-  "version": "1.3.3",
   "description": "Professional website for Marc Flennert",
-  "main": "server-prod.js",
-  "engines": {
-    "node": "v10.1.0",
-    "npm": "6.4.1"
-  },
-  "scripts": {
-    "local": "webpack-dev-server --mode=development --hot --open --progress --config webpack.config.local.js --env=dev",
-    "build": "webpack --mode=production --open --progress --config webpack.config.build.js",
-    "start": "node start.js",
-    "heroku-postbuild": "webpack --mode=production --open --progress --config webpack.config.build.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "license": "UNLICENSED",
+  "author": "cornyn@gmail.com",
   "repository": {
     "type": "git",
     "url": "https://github.com/quantumtom/marcflennert.git"
   },
-  "author": "cornyn@gmail.com",
-  "license": "UNLICENSED",
+  "version": "1.3.3",
+  "main": "index.js",
+  "scripts": {
+    "build": "webpack --mode=production --open --progress --config webpack.config.js",
+    "predeploy": "npm run build",
+    "dev": "cross-env NODE_ENV=dev webpack-serve --open --config webpack.config.js",
+    "heroku-postbuild": "webpack --mode=production --open --progress --config webpack.config.js",
+    "lint": "eslint src",
+    "lint:fix": "npm run lint -- --fix",
+    "local": "webpack-dev-server --mode=development --hot --open --progress --config webpack.config.js --env=dev",
+    "start": "node start.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "dependencies": {
     "bootstrap": "^4.1.3",
-    "domready": "^1.0.8",
-    "ejs": "^2.6.1",
-    "express": "^4.16.4",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.5"
   },
   "devDependencies": {
+    "@babel/core": "^7.1.5",
+    "@babel/preset-env": "^7.1.5",
     "acorn": "^6.0.4",
+    "autoprefixer": "^9.4.2",
+    "babel-eslint": "^10.0.1",
+    "babel-loader": "^8.0.4",
     "clean-webpack-plugin": "^1.0.0",
+    "copy-webpack-plugin": "^4.6.0",
+    "cross-env": "^5.2.0",
     "css-loader": "^1.0.1",
     "csv-loader": "^3.0.2",
+    "ejs": "^2.6.1",
     "ejs-webpack-loader": "^2.2.2",
     "eslint": "^5.9.0",
+    "eslint-config-prettier": "^3.1.0",
+    "eslint-plugin-babel": "^5.2.1",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jquery": "^1.3.2",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-prettier": "^3.0.0",
+    "eslint-plugin-react": "^7.11.1",
+    "express": "^4.16.4",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^2.0.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.0.7",
+    "husky": "^1.1.3",
+    "image-webpack-loader": "^4.5.0",
+    "install": "^0.12.2",
+    "lint-staged": "^8.0.4",
     "lodash": "^4.17.5",
     "mini-css-extract-plugin": "^0.4.4",
+    "node-sass": "^4.10.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "papaparse": "^4.6.2",
     "path": "^0.12.7",
+    "postcss-loader": "^3.0.0",
+    "precss": "^4.0.0",
+    "preload-webpack-plugin": "^3.0.0-beta.3",
+    "prettier": "^1.15.1",
+    "prettier-package-json": "^2.0.1",
+    "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "uglifyjs-webpack-plugin": "^2.0.1",
+    "url-loader": "^1.1.2",
     "webpack": "^4.25.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-middleware": "^3.4.0",
     "webpack-dev-server": "^3.1.10",
     "webpack-merge": "^4.1.4",
+    "webpack-serve": "^2.0.2",
     "xml-loader": "^1.2.1"
+  },
+  "engines": {
+    "node": "v10.1.0",
+    "npm": "6.4.1"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "package.json": [
+      "prettier-package-json --write",
+      "git add"
+    ],
+    "*.js": [
+      "eslint --fix",
+      "git add"
+    ]
   }
 }
