--- a/package.json
+++ b/package.json
@@ -10,13 +10,12 @@
   "version": "1.3.3",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --mode=production --open --progress --config webpack.config.js",
+    "builddev": "webpack --open --progress",
+    "buildprod": "webpack --mode=production",
     "predeploy": "npm run build",
-    "dev": "cross-env NODE_ENV=dev webpack-serve --open --config webpack.config.js",
-    "heroku-postbuild": "webpack --mode=production --open --progress --config webpack.config.js",
+    "dev": "webpack-serve --open",
     "lint": "eslint src",
     "lint:fix": "npm run lint -- --fix",
-    "local": "webpack-dev-server --mode=development --hot --open --progress --config webpack.config.js --env=dev",
     "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -37,7 +36,6 @@
     "babel-loader": "^8.0.4",
     "clean-webpack-plugin": "^1.0.0",
     "copy-webpack-plugin": "^4.6.0",
-    "cross-env": "^5.2.0",
     "css-loader": "^1.0.1",
     "csv-loader": "^3.0.2",
     "ejs-webpack-loader": "^2.2.2",
@@ -49,11 +47,9 @@
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-prettier": "^3.0.0",
     "eslint-plugin-react": "^7.11.1",
-    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^2.0.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.0.7",
-    "husky": "^1.1.3",
     "image-webpack-loader": "^4.5.0",
     "install": "^0.12.2",
     "lint-staged": "^8.0.4",
@@ -73,8 +69,6 @@
     "url-loader": "^1.1.2",
     "webpack": "^4.25.1",
     "webpack-cli": "^3.1.2",
-    "webpack-dev-middleware": "^3.4.0",
-    "webpack-dev-server": "^3.1.10",
     "webpack-merge": "^4.1.4",
     "webpack-serve": "^2.0.2",
     "xml-loader": "^1.2.1"
@@ -82,11 +76,6 @@
   "engines": {
     "node": "v10.1.0",
     "npm": "6.4.1"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
   },
   "lint-staged": {
     "package.json": [
