--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
   "version": "1.3.3",
   "main": "index.js",
   "scripts": {
-    "builddev": "webpack --open --progress",
-    "buildprod": "webpack --mode=production",
+    "build-dev": "webpack --open --progress",
+    "build": "webpack --mode=production",
+    "heroku-prebuild": "npm run build",
     "start": "node --optimize_for_size --max_old_space_size=920 --gc_interval=100 server.js",
     "predeploy": "npm run build",
     "dev": "webpack-serve --open",
