--- a/package.json
+++ b/package.json
@@ -14,12 +14,11 @@
   "version": "1.3.3",
   "main": "index.js",
   "scripts": {
-    "build-dev": "webpack --open --progress",
-    "build": "webpack --mode=production",
-    "heroku-prebuild": "npm run build",
+    "build-dev": "NODE_ENV=dev webpack --mode=development --open --progress",
+    "build": "NODE_ENV=production webpack",
     "start": "node --optimize_for_size --max_old_space_size=920 --gc_interval=100 server.js",
     "predeploy": "npm run build",
-    "dev": "webpack-serve --open",
+    "dev": "NODE_ENV=dev webpack-serve --open --mode=development",
     "lint": "eslint src",
     "lint:fix": "npm run lint -- --fix",
     "test": "echo \"Error: no test specified\" && exit 1"
