Change preload to prefetch.

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "build": "NODE_ENV=production webpack",
     "start": "node --optimize_for_size --max_old_space_size=920 --gc_interval=100 server.js",
     "heroku-postbuild": "npm run build",
-    "dev": "NODE_ENV=dev webpack-serve --open --mode=development",
+    "dev": "NODE_ENV=dev webpack-serve --open",
     "lint": "eslint src",
     "lint:fix": "npm run lint -- --fix",
     "test": "echo \"Error: no test specified\" && exit 1"
