--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "type": "git",
     "url": "https://github.com/quantumtom/marcflennert.git"
   },
-  "version": "1.3.3",
+  "version": "1.4.0",
   "main": "index.js",
   "scripts": {
     "build-dev": "NODE_ENV=dev webpack --mode=development --open --progress",
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "bootstrap": "^4.1.3",
+    "compression": "^1.7.3",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "jquery": "^3.3.1",
@@ -74,6 +75,7 @@
     "url-loader": "^1.1.2",
     "webpack": "^4.25.1",
     "webpack-cli": "^3.1.2",
+    "webpack-manifest-plugin": "^2.0.4",
     "webpack-merge": "^4.1.4",
     "webpack-serve": "^2.0.2",
     "xml-loader": "^1.2.1"
