--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "url": "https://github.com/quantumtom/marcflennert.git"
   },
   "version": "1.4.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "build-dev": "NODE_ENV=dev webpack --mode=development --open --progress",
     "build": "NODE_ENV=production webpack",
@@ -54,7 +54,6 @@
     "eslint-plugin-prettier": "^3.0.0",
     "eslint-plugin-react": "^7.11.1",
     "file-loader": "^2.0.0",
-    "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.0.7",
     "image-webpack-loader": "^4.5.0",
     "install": "^0.12.2",
@@ -77,8 +76,7 @@
     "webpack-cli": "^3.1.2",
     "webpack-manifest-plugin": "^2.0.4",
     "webpack-merge": "^4.1.4",
-    "webpack-serve": "^2.0.2",
-    "xml-loader": "^1.2.1"
+    "webpack-serve": "^2.0.2"
   },
   "lint-staged": {
     "package.json": [
