--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "bootstrap": "^4.1.3",
+    "cache-polyfill": "^1.0.1",
     "compression": "^1.7.3",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
@@ -69,6 +70,7 @@
     "prettier": "^1.15.1",
     "prettier-package-json": "^2.0.1",
     "sass-loader": "^7.1.0",
+    "serviceworker-webpack-plugin": "^1.0.1",
     "style-loader": "^0.23.1",
     "uglifyjs-webpack-plugin": "^2.0.1",
     "url-loader": "^1.1.2",
