--- a/package.json
+++ b/package.json
@@ -1,88 +1,56 @@
 {
   "name": "marcflennert",
-  "description": "Professional website for Marc Flennert",
-  "license": "UNLICENSED",
-  "author": "cornyn@gmail.com",
-  "engines": {
-    "node": "v11.1.0",
-    "npm": "6.4.1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/quantumtom/marcflennert.git"
-  },
-  "version": "1.5.0",
-  "main": "server.js",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "build-dev": "NODE_ENV=dev webpack --mode=development --progress",
-    "build": "NODE_ENV=production webpack --progress",
-    "start": "node --optimize_for_size --max_old_space_size=920 --gc_interval=100 server.js",
-    "heroku-postbuild": "npm run build",
-    "dev": "NODE_ENV=dev webpack-serve --open",
-    "lint": "eslint src",
-    "lint:fix": "npm run lint -- --fix",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint",
+    "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
-    "bootstrap": "^4.3.1",
-    "compression": "^1.7.4",
-    "ejs": "^2.6.2",
-    "express": "^4.17.1",
-    "jquery": "^3.4.1",
-    "path": "^0.12.7",
-    "popper.js": "^1.15.0",
-    "throng": "^4.0.0"
+    "core-js": "^2.6.5",
+    "vue": "^2.6.10"
   },
   "devDependencies": {
-    "@babel/core": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
-    "acorn": "^6.2.1",
-    "autoprefixer": "^9.6.1",
-    "babel-eslint": "^10.0.2",
-    "babel-loader": "^8.0.6",
-    "clean-webpack-plugin": "^1.0.1",
-    "copy-webpack-plugin": "^4.6.0",
-    "css-loader": "^2.1.1",
-    "csv-loader": "^3.0.2",
-    "ejs-webpack-loader": "^2.2.2",
+    "@vue/cli-plugin-babel": "^3.9.0",
+    "@vue/cli-plugin-eslint": "^3.9.0",
+    "@vue/cli-plugin-unit-mocha": "^3.9.0",
+    "@vue/cli-service": "^3.9.0",
+    "@vue/test-utils": "1.0.0-beta.29",
+    "babel-eslint": "^10.0.1",
+    "chai": "^4.1.2",
     "eslint": "^5.16.0",
-    "eslint-config-prettier": "^3.6.0",
-    "eslint-plugin-babel": "^5.2.1",
-    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-babel": "^5.3.0",
     "eslint-plugin-jquery": "^1.5.1",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.0",
-    "eslint-plugin-react": "^7.14.3",
-    "file-loader": "^2.0.0",
-    "html-webpack-plugin": "^3.0.7",
-    "image-webpack-loader": "^4.5.0",
-    "install": "^0.12.2",
-    "lint-staged": "^8.2.1",
-    "mini-css-extract-plugin": "^0.5.0",
-    "node-sass": "^4.12.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "papaparse": "^4.6.3",
-    "postcss-loader": "^3.0.0",
-    "precss": "^4.0.0",
+    "eslint-plugin-vue": "^5.0.0",
     "prettier": "^1.18.2",
-    "prettier-package-json": "^2.1.0",
-    "sass-loader": "^7.1.0",
-    "serviceworker-webpack-plugin": "^1.0.1",
-    "style-loader": "^0.23.1",
-    "uglifyjs-webpack-plugin": "^2.1.3",
-    "url-loader": "^1.1.2",
-    "webpack": "^4.38.0",
-    "webpack-cli": "^3.3.6",
-    "webpack-serve": "^2.0.2"
+    "vue-template-compiler": "^2.6.10",
+    "webpack": "^4.38.0"
   },
-  "lint-staged": {
-    "package.json": [
-      "prettier-package-json --write",
-      "git add"
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "node": true
+    },
+    "extends": [
+      "plugin:vue/strongly-recommended",
+      "eslint:recommended"
     ],
-    "*.js": [
-      "eslint --fix",
-      "git add"
-    ]
-  }
+    "parserOptions": {
+      "parser": "babel-eslint"
+    }
+  },
+  "postcss": {
+    "plugins": {
+
+      "autoprefixer": {}
+    }
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions"
+  ]
 }
