--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "ejs": "^2.6.2",
     "express": "^4.17.1",
     "jquery": "^3.4.1",
+    "npm": "^6.10.3",
     "path": "^0.12.7",
     "popper.js": "^1.15.0",
     "throng": "^4.0.0"
@@ -36,44 +37,44 @@
   "devDependencies": {
     "@babel/core": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
-    "acorn": "^6.2.1",
+    "acorn": "^7.0.0",
     "autoprefixer": "^9.6.1",
     "babel-eslint": "^10.0.2",
     "babel-loader": "^8.0.6",
-    "clean-webpack-plugin": "^1.0.1",
-    "copy-webpack-plugin": "^4.6.0",
-    "css-loader": "^2.1.1",
+    "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^5.0.4",
+    "css-loader": "^3.2.0",
     "csv-loader": "^3.0.2",
     "ejs-webpack-loader": "^2.2.2",
-    "eslint": "^5.16.0",
-    "eslint-config-prettier": "^3.6.0",
+    "eslint": "^6.1.0",
+    "eslint-config-prettier": "^6.0.0",
     "eslint-plugin-babel": "^5.2.1",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jquery": "^1.5.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.14.3",
-    "file-loader": "^2.0.0",
+    "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.0.7",
-    "image-webpack-loader": "^4.5.0",
-    "install": "^0.12.2",
-    "lint-staged": "^8.2.1",
+    "image-webpack-loader": "^5.0.0",
+    "install": "^0.13.0",
+    "lint-staged": "^9.2.1",
     "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.12.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "papaparse": "^4.6.3",
+    "papaparse": "^5.0.2",
     "postcss-loader": "^3.0.0",
     "precss": "^4.0.0",
     "prettier": "^1.18.2",
     "prettier-package-json": "^2.1.0",
-    "sass-loader": "^7.1.0",
+    "sass-loader": "^7.2.0",
     "serviceworker-webpack-plugin": "^1.0.1",
-    "style-loader": "^0.23.1",
-    "uglifyjs-webpack-plugin": "^2.1.3",
-    "url-loader": "^1.1.2",
-    "webpack": "^4.38.0",
+    "style-loader": "^1.0.0",
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "url-loader": "^2.1.0",
+    "webpack": "^4.39.2",
     "webpack-cli": "^3.3.6",
-    "webpack-serve": "^2.0.2"
+    "webpack-serve": "^3.1.1"
   },
   "lint-staged": {
     "package.json": [
