--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "npm": "^6.10.3",
     "path": "^0.12.7",
     "popper.js": "^1.15.0",
-    "throng": "^4.0.0"
+    "throng": "^4.0.0",
+    "webpack-plugin-serve": "latest"
   },
   "devDependencies": {
     "@babel/core": "^7.11.1",
